[gd_scene load_steps=3 format=3 uid="uid://bqwyucqidgs7g"]

[ext_resource type="Script" uid="uid://samh1whx8i6t" path="res://scripts/pause_menu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cma8cwdroigo7" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3"]

[node name="PauseMenu" type="CanvasLayer" node_paths=PackedStringArray("resume_button", "main", "options", "window_mode_button", "window_mode_container", "vsync_mode_button", "vsync_container", "pixel_perfect_mode_button", "master_volume_slider", "sfx_volume_slider", "music_volume_slider")]
process_mode = 3
script = ExtResource("1")
resume_button = NodePath("Main/PanelContainer/VBoxContainer/ResumeButton")
main = NodePath("Main")
options = NodePath("Options")
window_mode_button = NodePath("Options/PanelContainer/MarginContainer/VBoxContainer/WindowMode/WindowModeButton")
window_mode_container = NodePath("Options/PanelContainer/MarginContainer/VBoxContainer/WindowMode")
vsync_mode_button = NodePath("Options/PanelContainer/MarginContainer/VBoxContainer/VSync/VSyncButton")
vsync_container = NodePath("Options/PanelContainer/MarginContainer/VBoxContainer/VSync")
pixel_perfect_mode_button = NodePath("Options/PanelContainer/MarginContainer/VBoxContainer/PixelPerfect/PixelPerfectButton")
master_volume_slider = NodePath("Options/PanelContainer/MarginContainer/VBoxContainer/MasterVolume/MasterVolumeSlider")
sfx_volume_slider = NodePath("Options/PanelContainer/MarginContainer/VBoxContainer/SFXVolume/SFXVolumeSlider")
music_volume_slider = NodePath("Options/PanelContainer/MarginContainer/VBoxContainer/MusicVolume/MusicVolumeSlider")

[node name="Main" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="Main"]
custom_minimum_size = Vector2(135, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Main/PanelContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="Main/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Options" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="Options"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Options/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Options/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Options/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3")
text = "Options"
horizontal_alignment = 1

[node name="WindowMode" type="HBoxContainer" parent="Options/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/PanelContainer/MarginContainer/VBoxContainer/WindowMode"]
layout_mode = 2
text = "Window Mode"

[node name="WindowModeButton" type="OptionButton" parent="Options/PanelContainer/MarginContainer/VBoxContainer/WindowMode"]
layout_mode = 2
size_flags_horizontal = 10
selected = 0
item_count = 2
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="VSync" type="HBoxContainer" parent="Options/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/PanelContainer/MarginContainer/VBoxContainer/VSync"]
layout_mode = 2
text = "V-Sync"

[node name="VSyncButton" type="CheckButton" parent="Options/PanelContainer/MarginContainer/VBoxContainer/VSync"]
layout_mode = 2
size_flags_horizontal = 10

[node name="PixelPerfect" type="HBoxContainer" parent="Options/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/PanelContainer/MarginContainer/VBoxContainer/PixelPerfect"]
layout_mode = 2
text = "Pixel Perfect"

[node name="PixelPerfectButton" type="CheckButton" parent="Options/PanelContainer/MarginContainer/VBoxContainer/PixelPerfect"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MasterVolume" type="HBoxContainer" parent="Options/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master"

[node name="MasterVolumeSlider" type="HSlider" parent="Options/PanelContainer/MarginContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 1.0
step = 0.05

[node name="SFXVolume" type="HBoxContainer" parent="Options/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "SFX"

[node name="SFXVolumeSlider" type="HSlider" parent="Options/PanelContainer/MarginContainer/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 1.0
step = 0.05

[node name="MusicVolume" type="HBoxContainer" parent="Options/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="Options/PanelContainer/MarginContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 1.0
step = 0.05

[node name="BackButton" type="Button" parent="Options/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Main/PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Main/PanelContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Main/PanelContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="Options/PanelContainer/MarginContainer/VBoxContainer/WindowMode/WindowModeButton" to="." method="_on_window_mode_button_item_selected"]
[connection signal="toggled" from="Options/PanelContainer/MarginContainer/VBoxContainer/VSync/VSyncButton" to="." method="_on_vsync_button_toggled"]
[connection signal="toggled" from="Options/PanelContainer/MarginContainer/VBoxContainer/PixelPerfect/PixelPerfectButton" to="." method="_on_pixel_perfect_button_toggled"]
[connection signal="value_changed" from="Options/PanelContainer/MarginContainer/VBoxContainer/MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="Options/PanelContainer/MarginContainer/VBoxContainer/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="Options/PanelContainer/MarginContainer/VBoxContainer/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="Options/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
